tests/ui/associated-consts/assoc-const-equality-region-var-hash-ice.stderr
error[E0261]: use of undeclared lifetime name `'r`
  --> $DIR/assoc-const-equality-region-var-hash-ice.rs:7:23
   |
LL | fn foo() -> dyn Trait<'r, K = {}> {
   |                       ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'r` lifetime
   |
LL | fn foo() -> dyn for<'r> Trait<'r, K = {}> {
   |                 +++++++
help: consider introducing lifetime `'r` here
   |
LL | fn foo<'r>() -> dyn Trait<'r, K = {}> {
   |       ++++

error[E0658]: associated const equality is incomplete
  --> $DIR/assoc-const-equality-region-var-hash-ice.rs:7:27
   |
LL | fn foo() -> dyn Trait<'r, K = {}> {
   |                           ^^^^^^
   |
   = note: see issue #132980 <https://github.com/rust-lang/rust/issues/132980> for more information
   = help: add `#![feature(min_generic_const_args)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0308]: mismatched types
  --> $DIR/assoc-const-equality-region-var-hash-ice.rs:11:9
   |
LL |         6
   |         ^ expected `()`, found integer
   |
help: you might have meant to return this value
   |
LL |         return 6;
   |         ++++++  +

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0261, E0308, E0658.
For more information about an error, try `rustc --explain E0261`.
